# dotfiles

./: .gitignore  Cargo.toml  README.md  justfile  todo.md  todo.norg
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/: arduino-avr-program.md
projects/7-segment-display-counter/: 7-segment-display-counter.ino  readme.md
projects/led-line/: led-line.ino
projects/shift-register/: shift-register.ino
src/: cmd.rs  color.rs  lib.rs  logging.rs  path.rs  prompt.rs
src/cli/: mod.rs
src/color/: mod.rs
src/data/: entry.rs  file.rs  item.rs  mod.rs
src/dotfile/: dotfile.rs  entry.rs  file.rs  indexer.rs  item.rs  mock.rs  mod.rs  tests.rs  unit.rs
src/dotfile/tests/: integration.rs  mod.rs  unit.rs
src/files/: mod.rs  tests.rs
src/handler/: diff.rs  indexer.rs  mod.rs  status.rs  sync.rs  types.rs
src/handler/tests/: integration.rs  mod.rs  sync.rs  unit.rs
src/index/: mod.rs  tests.rs
src/mocks/: mod.rs
src/testing/: mod.rs
src/utils/: mod.rs  tests.rs
tests/: integration_test.rs
