[package]
name = "dotfiles"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "dotf"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo"] }
crossterm = "0.25"
data-encoding = "2.3"
directories = "4.0"
glob = "0.3.0"
home = "0.5.4"
log = "0.4"
env_logger = "0.9"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
toml = "0.5.9"
regex = "1"
inquire = "0.5.1"
lazy_static = "1.4.0"
