[package]
name = "dotfiles"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "dotf"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo"] }
crossterm = "0.28"
data-encoding = "2.6"
directories = "5.0"
glob = "0.3.1"
home = "0.5.9"
log = "0.4"
env_logger = "0.11"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
toml = "0.8.19"
regex = "1"
inquire = "0.6.2"
lazy_static = "1.5.0"
